# cookbook-notebooks

./: README.md  pyproject.toml
ragie-cookbook-notebooks/: dynamic-filter-notebook.ipynb
