[tool.poetry]
name = "ragie-cookbook-notebooks"
version = "0.1.0"
description = "A collection of jupyter notebooks outlining techniques for integrating with Ragie.ai"
authors = ["Matt Kauffman <matt@ragie.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.2"
ragie = "^1.1.0"
ipykernel = "^6.29.5"
openai = "^1.52.2"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
